# diagrams

./: .components.yaml  .gitignore  .project  .travis.yml  AGENTS.md  README.md  install  pyproject.toml  run
.github/workflows/: build.yml
dgs/: diagrams.py  diagrams_cmd.py  ngwebserver.py  requirements.txt  version.py  webserver.py
dgs/templates/: index.html
dgs/web/css/: diagrams.css
dgs/web/examples/: example.circo  example.dot  example.fdp
diagrams_examples/: example.dot  example.mscgen  example.patchwork  example.twopi
scripts/: blackisort  install  test
templates/: diagrams.html  index.html  menu.html
tests/: test_diagrams.py  test_webserver.py
web/css/: diagrams.css
web/examples/: example.circo  example.fdp  example.mscgen  example.neato  example.osage  example.patchwork  example.plantuml  example.sfdp  example.twopi
