[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-diagrams"
description = "nicegui based online diagrams rendering tool for e.g. plantuml and graphviz"
keywords = ["nicegui", "plantuml", "graphviz"]
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
  # nicegui widgets
  "ngwidgets>=0.11.1",
]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[tool.hatch.version]
path = "dgs/__init__.py"

[project.urls]
Home = "https://github.com/BITPlan/diagrams"
Documentation = "http://wiki.bitplan.com/index.php/Diagrams"
Source = "https://github.com/BITPlan/diagrams"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["dgs","diagrams_examples"]

[tool.hatch.build.targets.wheel.sources]
"dgs" = "dgs"
"diagrams_examples" = "diagrams_examples"

[project.scripts]
diagrams= "dgs.diagrams_cmd:main"
